--- a/bib/objects.bib
+++ b/bib/objects.bib
@@ -133,3 +133,13 @@ url = "http://www.sciencedirect.com/science/article/pii/0168900287908874",
      year = "2012",
      note ="\href{https://cdsweb.cern.ch/record/1435194}{https://cdsweb.cern.ch/record/1435194}"
 }
+
+@techreport{ATLAS-CONF-2014-046,
+      title         = "{Calibration of the performance of $b$-tagging for $c$ and
+                       light-flavour jets in the 2012 ATLAS data}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2014-046",
+      month         = "Jul",
+      year          = "2014",
+}
