--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -73,10 +73,10 @@
 \newcommand{\protos}     {{\tt PROTOS}}
 \def\pt{\ensuremath{p_{\mathrm{T}}}}
 \def\mt{\ensuremath{m_{\mathrm{T}}}}
-\def\met{\mbox{\ensuremath{E_{\mathrm{T}^{\mathrm{Miss}}}}}}
-\def\mex{\mbox{\ensuremath{E_x^{\mathrm{Miss}}}}}
-\def\mexy{\mbox{\ensuremath{E_{x,y}^{\mathrm{Miss}}}}}
-\def\mey{\mbox{\ensuremath{E_y^{\mathrm{Miss}}}}}
+\def\met{\mbox{\ensuremath{E_{\mathrm{T}^{\mathrm{miss}}}}}}
+\def\mex{\mbox{\ensuremath{E_x^{\mathrm{miss}}}}}
+\def\mexy{\mbox{\ensuremath{E_{x,y}^{\mathrm{miss}}}}}
+\def\mey{\mbox{\ensuremath{E_y^{\mathrm{miss}}}}}
 \def\et{\mbox{\ensuremath{E_{\mathrm{T}}}}}
 \newcommand{\mtw}{\ensuremath{m_{\mathrm T}^W}}
 \newcommand{\effFake}{\ensuremath{\epsilon_{\mathrm{fake}}}}
