half way through

--- a/bib/theory.bib
+++ b/bib/theory.bib
@@ -631,3 +631,39 @@
       reportNumber   = "CMS-TOP-12-020, CERN-PH-EP-2014-242",
       SLACcitation   = "%%CITATION = ARXIV:1410.1154;%%",
 }
+
+@article{Agashe:2014kda,
+      author         = "Olive, K.A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin.Phys.",
+      volume         = "C38",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      year           = "2014",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%",
+}
+
+@article{Hollik:2011ps,
+      author         = "Hollik, Wolfgang and Pagani, Davide",
+      title          = "{The electroweak contribution to the top quark
+                        forward-backward asymmetry at the Tevatron}",
+      journal        = "Phys.Rev.",
+      volume         = "D84",
+      pages          = "093003",
+      doi            = "10.1103/PhysRevD.84.093003",
+      year           = "2011",
+      eprint         = "1107.2606",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MPP-2011-82",
+      SLACcitation   = "%%CITATION = ARXIV:1107.2606;%%",
+}
+
+@unpublished{mitov,
+title= {Top quark pair cross section},
+author = {Alexander Mitov},
+year = {2014},
+note= {$8^{th}$ Internation Workshop on the CKM Unitarity Triangle},
+URL= {http://indico.cern.ch/event/253826/session/9/contribution/120/material/slides/0.pdf},
+}
