--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -1,4 +1,4 @@
-\chapter{Theoretical framework}
+\chapter{Theoretical Framework}
 \label{sec:theory}
 
 \section{The Standard Model}
@@ -12,9 +12,9 @@ The matter particles -- three {\it leptons}, three {\it neutrinos} and six
 there exist an antiparticle with same mass and opposite quantum
 numbers for a total of 24 matter particles.
 They all carry a weak charge and interact with
-the weak force carriers $W$ and $Z$. All matter particles, except for
+the weak force carriers $W^{\pm}$ and $Z$. All matter particles, except for
 neutrinos, are electrically charged and interact with the
-electromagnetic force, mediated by $\gamma$. Only the quarks have a
+electromagnetic force, mediated by the photon. Only the quarks have a
 color charge and undergo strong force interactions with {\it gluons}.  
 Table~\ref{tab:smparticles} shows the elementary particles of the
 Standard Model, classified as matter particles and force carriers.
@@ -52,7 +52,7 @@ The SM is then the combination of two theories: the {\it Quantum
 interaction arising from the $SU(3)$ color symmetry, and the {\it
   Electroweak} lagrangian, which accounts for the electroweak
 interactions corresponding to the $SU(2)\times{}U(1)$ isospin and
-hypercharge symmetries.
+hypercharge symmetries:
 \begin{equation}
 \begin{split}
 \lagr{}_{SM}  & = \lagr{}_{SU(3)} + \lagr{}_{SU(2)\times{}U(1)} \\
@@ -63,7 +63,7 @@ hypercharge symmetries.
 + \lagr{}_{SU(2)\times{}U(1)}^{Higgs} +
 \lagr{}_{SU(2)\times{}U(1)}^{Yukawa} \\
 \end{split}
-\phantom{.}
+.
 \end{equation}
 The $\lagr{}^{Gauge}$ terms describe the dynamics of the gauge fields:
 the gluons in QCD, and the $W$, $Z$ and $\gamma$ boson in the
@@ -75,9 +75,8 @@ breaking of the $SU(2)\times{}U(1)$ gauge theory via the Higgs
 mechanism, and they are responsible, respectively, for the interaction
 of the Higgs field with the other particles and force carriers, and
 for generating their masses.
-The Higgs field
-%, whose corresponding boson has been discovered at the LHC in
-%2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa} 
+The Higgs field, whose corresponding boson has been discovered at the
+LHC in 2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa},
 needs to be introduced in
 the $SU(2)\times{}U(1)$ theory in order to account for the
 non-vanishing masses of $W$ and $Z$ bosons and of lepton and quarks.
@@ -89,7 +88,7 @@ SM. Table~\ref{tab:smmasses} summarizes the masses of the SM particles.
   \begin{tabular}{cccc}\toprule
     Spin-$1$ & \multirow{2}{*}{mass} & Spin-0 & \multirow{2}{*}{mass}\\
     gauge bosons & & scalar boson & \\\midrule
-    $\gamma$      & 0  & \multirow{4}{*}{$H$} & \multirow{4}{*}{$\sim 125~\GeV$}                        \\
+    $\gamma$      & 0  & \multirow{4}{*}{$H$} & \multirow{4}{*}{$125.7\pm0.4\GeV$}\\
     $g$           & 0  & &                        \\
     $W^{\pm}$ & $ 80.385 \pm 0.015 \GeV$ & &\\
     $Z$       & $ 91.188 \pm 0.002 \GeV$ & &\\\bottomrule
@@ -114,26 +113,29 @@ SM. Table~\ref{tab:smmasses} summarizes the masses of the SM particles.
     &
     d & \small{$4.1-5.7\MeV$} &  
     s & \small{$100^{+30}_{-20}\MeV$} &  
-    b & \small{$4.19^{+0.18}_{-0.06}\GeV$} \\\bottomrule
+    b & \small{$4.19^{+0.18}_{-0.06}\GeV$} \\
+\bottomrule
   \end{tabular}
   \caption{Mass values for the elementary particles of the Standard
-    Model, as measured at experiments.\label{tab:smmasses}}
+    Model, as measured at experiments~\cite{Agashe:2014kda}.}
+\label{tab:smmasses}
 \end{table}
  
 \section{The top quark}
 \label{sec:topquark}
 
 The top quark was discovered in 1995 at the Tevatron by the
-CDF~\cite{topcdf} and \dzero{}~\cite{topdzero} collaborations. With a
+CDF~\cite{topcdf} and \dzero{}~\cite{topdzero} Collaborations. With a
 mass of $\approx{}170\GeV{}$, it is the heaviest elementary particle
 observed so far. Its proximity to the electroweak scale suggests that
 the top quark might play a relevant role in new physics
 scenarios. Therefore its production, decay modes and properties have
 been studied in detail at the two hadron colliders powerful 
-enough to produce it: the Tevatron, where protons and antiprotons were
-collided (\ppbar{}), and the Large Hadron Collider (LHC), colliding protons.
+enough to produce it: the Tevatron, where protons and antiprotons (\ppbar{}) were
+collided till September 2011, and the Large Hadron Collider (LHC),
+colliding protons since February 2010.
 
-\subsection{Pair production at hadron colliders}
+\subsection{Top quark production at hadron colliders}
 \label{sec:topprod}
 
 At hadron colliders, top quarks are mainly produced in pairs
@@ -150,9 +152,8 @@ proton-antiproton collisions.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.95\textwidth]{figures/theory/ttbarprod}
   \caption{Leading order diagrams for QCD top quark pair production.
-    Gluon fusion, {\tt a)} and {\tt b)}, is the dominant process at
-    LHC energies, while quark--antiquark annihilation, {\tt c)}, is
-    the dominant one at Tevatron energies~\cite{Fiorini:2012fe}.} 
+    Gluon fusion, {\tt a)} and {\tt b)}, and  quark--antiquark
+    annihilation, {\tt c)}.}
   \label{fig:ttbarprod}
 \end{figure}
 
@@ -162,13 +163,15 @@ constituent quarks and gluons. Such interactions cannot be described
 with perturbative QCD because the expansion parameter $\alpha_s$ is
 large for small momentum exchange.
 In some collisions, however, in addition to the long distance parton
-interactions, two quarks or two gluons undergo a hard (i.e. short--distance) scattering where a top quark pair is produced. 
-The {\it factorization principle}~\cite{factorprinciple} states that
+interactions, two quarks or two gluons undergo a hard
+(i.e. short--distance) scattering where a top quark pair is produced.
+The {\it factorization theorem}~\cite{factorprinciple} states that
 the perturbative QCD description of this hard process is possible by
 factorizing the long--distance effects into functions $f$ describing the
 proton structure. Thus the cross section for top quark pair
 production in a collision of two protons with momenta $P_1$ and $P_2$
-is given by: 
+is given by:
+\small{
 \begin{equation}
   \sigma(p(P_1)+p(P_2)\to\ttbar{}+{\rm X})
   = 
@@ -179,27 +182,31 @@ is given by:
   ~\hat{\sigma}_{ab\to\ttbar{}+\rm{X}}(x_1P_1,x_2P_2,\renormscale{},\factscale{}),
   \label{eq:ttbarxs}
 \end{equation}
-where the sum runs over all type of partons, and $x_{1,2}$ are the
+}
+where the sum runs over all type of partons, $x_{1,2}$ are the
 fractions of proton momentum carried by the constituents participating
-in the hard interaction. 
-
+in the hard interaction, and $\hat{\sigma}_{ab\to\ttbar{}+\rm{X}}$ is
+  the partonic cross section. 
 The {\it parton distribution functions} (PDFs) $f_a(x,\factscale{})$
 represent the probability density for a parton of a type $i$ to carry
 a fraction of proton momentum $x$. The {\it factorization scale}
 \factscale{} is set arbitrarily and defines the distinction between
-short-- and long--- distance interactions based on the transferred momentum
-$Q^2$. An additional renormalization scale \renormscale{} accounts for higher
-order corrections. For calculations and simulations, both scales are
-set to the typical transferred momentum of the process studied. In the case of
-\ttbar{} production the scale is chosen to be equal to the top mass $m_t$.
+short-- and long--distance interactions based on the transferred
+momentum $Q^2$. An additional renormalization scale \renormscale{}
+accounts for higher--order corrections. For calculations and
+simulations, both scales are set to the typical transferred momentum $Q^2$
+of the process studied. In the case of \ttbar{} production the scale
+is chosen to be equal to the top quark mass,
+$\factscale{}=\renormscale{}=m_t$.
   
 The PDFs cannot be computed in perturbation theory; instead, they are
-measured in deep inelastic scattering experiments and at hadron colliders.
+measured in deep--inelastic scattering experiments and at hadron colliders.
 For the studies presented in this thesis, the PDF estimations
-provided by the CTEQ~\cite{cteq6}, MRST~\cite{mrst}, MSTW~\cite{mstw}, CT10~\cite{ct10}
-and NNPDF~\cite{nnpdf} collaborations are used. Fig.~\ref{fig:pdfs}
-shows the PDFs of valence quarks, gluons and sea quarks for two values
-of transferred momentum $Q^2$ at which the proton is probed. 
+provided by the CTEQ~\cite{cteq6}, MRST~\cite{mrst}, MSTW~\cite{mstw},
+CT10~\cite{ct10} and NNPDF~\cite{nnpdf} collaborations are
+used. Fig.~\ref{fig:pdfs} shows the PDFs of valence quarks, gluons and
+sea quarks for two values of transferred momentum $Q^2$ at which the
+proton is probed. 
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.75\textwidth]{figures/theory/mstw2008nnlo68cl_allpdfs}
@@ -212,13 +219,13 @@ The typical fraction of momentum $x$ carried by each of the colliding
 partons in order to produce a top quark pair is defined by the
 relationship
 \begin{equation}
-\sqrt{x_1x_2s}\geq{}2m_t\phantom{.}
+\sqrt{x_1x_2s}\geq{}2m_t.
 \end{equation}
 Therefore, assuming the partons carry a similar fraction of momentum
 $x_1\simeq{}x_2\simeq{}x$:
 \begin{equation}
 x=\frac{2m_t}{\sqrt{s}}
-\phantom{.}
+.
 \end{equation}
 This corresponds to a typical value of $x\approx{}0.05$ at the LHC for
 a center-of-mass energy \seventev{} and \eighttev{}. As shown in
@@ -242,7 +249,14 @@ collaborations, yielding a combined value of $173.3\pm10.1$ pb at
 measurements at \eighttev{} yield $\sigma_{\ttbar{}}=242\pm{}9$ pb
 (ATLAS)~\cite{Aad:2014kva} and $\sigma_{\ttbar{}}=239\pm{}13$ pb
 (CMS)~\cite{Chatrchyan:2013faa}. All measurements are in agreement
-with the SM predictions above.
+with the SM predictions above. Measurements and predictions for
+Tevatron and LHC are summarized in Fig.~\ref{fig:ttxs} as a function
+of the center--of--mass energy $\sqrt{s}$.
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.75\textwidth]{figures/theory/tt_xsec_vsroots}
+  \caption{}
+  \label{fig:ttxs}
+\end{figure}
 
 \subsection{Decay}
 \label{sec:topdecay}
@@ -263,15 +277,19 @@ originating from the decays of the top and the antitop quarks:
   leading to a \ttbar{} final state with six quarks.
 \item Semileptonic final state: one $W$ boson decays into quarks,
   while the other decays leptonically, leading to a final state with
-  four quarks, one lepton and one neutrino.
+  four quarks, one lepton and one neutrino, also referred to as
+  \ljets{} final state.
 \item Dileptonic final state: both $W$ bosons decay leptonically,
   leading to a final state with two $b$ quarks, two leptons and two
   neutrinos. 
 \end{itemize}
 Given that the $W$ boson hadronic branching ratio is
 $\sim67\%$, the full hadronic and semileptonic final states occur
-$\sim45\%$ and $\sim44\%$ of the times, respectively, while the dileptonic decay has the
-remaining $\sim11\%$ probability.  
+$\sim45\%$ and $\sim44\%$ of the times, respectively, while the
+dileptonic decay has the remaining $\sim11\%$ probability. In this
+dissertation, the semileptonic final state to electron ($\ejets{}$)
+and muon ($\mujets$) is considered, with a branching ratio of about
+30\%.
 
 \subsection{Properties}
 \label{sec:topprop}
@@ -302,20 +320,21 @@ predictions~\cite{Aad:2013ksa,Aad:2014pwa,Chatrchyan:2013wua}.
 
 The measurements of the top quark properties listed in
 Sec~\ref{sec:topprop} yield results compatible with SM predictions.
-A different trend appeared to follow the {\it forward--backward}
+The only exception was the measurement of the {\it forward--backward}
 (FB) asymmetry in the production of \ttbar{} pairs in \ppbar{}
 collisions at the Tevatron. In this section, we will discuss the
-origins of the forward--backward asymmetry in SM \ttbar{} production,
-present a summary of Tevatron results, and illustrate the relevant
-observables at the LHC. 
+source of the forward--backward asymmetry in \ttbar{} production
+within the SM, present a summary of Tevatron results, illustrate the
+relevant observables at the LHC, and discuss possible contributions to
+the asymmetry beyond the SM.
 
 \subsection{Asymmetry in the SM}
 \label{sec:smca}
 
-The natural definition of a forward--backward asymmetry in the
+The definition of a forward--backward asymmetry in the
 \ttbar{} rest frame is the asymmetry in the distribution of the angle
 $\theta_t$ between the outgoing top quark and the incoming quark
-(Fig.~\ref{fig:cmdiagram}):
+(see Fig.~\ref{fig:cmdiagram}):
 \begin{equation}
 \label{eq:afbcostheta}
 \afb{}=\frac{N(\cos\theta_t>0)-N(\cos\theta_t<0)}{N(\cos\theta_t>0)+N(\cos\theta_t<0)}.
@@ -326,31 +345,32 @@ $gg\to\ttbar{}$ events, which are intrinsically symmetric.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/theory/cmdiagram}
   \caption{A representation of the $\qqbar{}\to\ttbar{}$ process in the
-    C.M. frame. The top quark $t$ is produced at an angle $\theta_t$
-    with respect to the direction of the incoming quark $q$. For
-    symmetric production the top quark is produced isotropically,
-    while for a positive (negative) asymmetry, positive (negative)
-    values of $\cos\theta_t$ are favored. } 
+    center--of--mass frame. The top quark $t$ is produced at an angle
+    $\theta_t$ with respect to the direction of the incoming quark
+    $q$. For symmetric production the top quark is produced
+    isotropically, while for a positive (negative) asymmetry, positive
+    (negative) values of $\cos\theta_t$ are favored.} 
   \label{fig:cmdiagram}
 \end{figure}
 
-From Eq.~\ref{eq:afbcostheta} follows that a non--zero asymmetry
+From Eq.~\ref{eq:afbcostheta} it follows that a non--zero asymmetry
 appears if the angular differential cross section includes
 non--vanishing terms with odd powers in $\cos\theta_t$.
 The dominant contribution to the SM charge asymmetry originates from
 the QCD \mbox{$\qqbar{}\to\ttbar{}+X$} production. Specifically, it originates from the
 interference between the Born amplitude for \mbox{$\qqbar{}\to\ttbar{}$} and
-its one--loop box correction, and from the one between initial and final
+its one--loop box correction, and from the interference between initial and final
 state radiation (ISR, FSR) in \mbox{$\qqbar{}\to{}\ttbar{}g$}
-(Fig.~\ref{fig:asymdiagrams}). The terms of the angular differential cross section
-$d\sigma_{\qqbar{}\to{}\ttbar{}}/d\cos\theta_t$ (Fig.~\ref{fig:cmdiagram})
-corresponding to these interferences are antisymmetric for the
-exchange of top and antitop quark momenta~\cite{Kuhn:1998kw}. In
-particular, considering the definitions in Eq.~\ref{eq:afbcostheta},
-Born-box interference generates positive asymmetries,
-while the ISR-FSR interference generates negative asymmetries.
-The relative size of the two contributions depends on the transverse
-momentum of the \ttbar{} system \pttt{}. For
+(see Fig.~\ref{fig:asymdiagrams}). The terms of the angular differential cross section
+$d\sigma_{\qqbar{}\to{}\ttbar{}}/d\cos\theta_t$ corresponding to these
+interferences are antisymmetric for the exchange of top and antitop
+quark momenta~\cite{Kuhn:1998kw}. In particular, considering the
+definition in Eq.~\ref{eq:afbcostheta}, Born--box interference
+generates a positive asymmetry, while the ISR--FSR interference
+generates a negative asymmetry.
+The overall asymmetry depends on the fractional contributions of the two
+sets of diagrams. Since the emission of ISR--FSR radiation correlates
+with the transverse momentum \pttt{} of the \ttbar{} pair, for
 $\pttt{}\lesssim{}25\GeV{}$ the asymmetry is positive, while for
 $\pttt{}\gtrsim{}25\GeV{}$ is negative. The overall effect is a
 positive asymmetry.
@@ -374,9 +394,10 @@ positive asymmetry.
 Charge asymmetric contributions also arise from the interference of
 the QCD \mbox{$\qqbar{}\to{}\ttbar{}$} diagrams in
 Fig.~\ref{fig:asymdiagrams} with the QED analogous where a gluon is
-replaced by a photon. The size of the QED corrections to the QCD
-asymmetric cross section depends on the relative importance of \uubar{}
-and \ddbar{} annihilations, due to the difference in electric charge.
+replaced by a photon~\cite{Hollik:2011ps}. The size of the QED
+corrections to the QCD asymmetric cross section depends on the
+relative importance of \uubar{} and \ddbar{} annihilations, due to the
+difference in electric charge.
 In \ppbar{} collisions (Tevatron) the QED contribution is estimated to
 be $\approx{}18\%$, while at LHC $pp$ collisions, with larger relative
 \ddbar{} importance, it accounts for approximately $13\%$ of the
@@ -395,30 +416,32 @@ $\sigma_A$ to the cross section and the symmetric one $\sigma_S$:
 \end{equation}
 Because the asymmetry vanishes at the tree level in the SM, a
 consistent fixed-order expansion at LO in perturbation theory involves the
-numerator at NLO and the denominator at LO:
+numerator computed at NLO and the denominator computed at LO:
 \begin{equation}
   A_{QCD}^{(0)}=\frac{\alpha_S\sigma_A^{(1)}}{\sigma_S^{(0)}}
 \end{equation}
-To date, predictions have thus been computed including the $\mathcal{O}(\alpha_s^3)$
-QCD contribution and the mixed $\mathcal{O}(\alpha_s^2\alpha)$ QCD-QED
-and QCD-weak corrections discussed above. 
+Until recently, predictions have thus been computed including the
+$\mathcal{O}(\alpha_s^3)$ QCD contribution and the mixed
+$\mathcal{O}(\alpha_s^2\alpha)$ QCD-QED and QCD-weak corrections
+discussed above. However, NLO QCD calculations are now available with
+preliminary predictions for \afb{}~\cite{mitov}, and predictions for
+\ac{} are expected.
 
-\subsection{\afb{} at \ppbar{} collisions}
+\subsection{\afb{} in \ppbar{} collisions}
 
 The $\cos\theta_t$ quantity would be the fundamental observable to
 measure the asymmetry in \ttbar{} production, but the direction of the
 incoming quark is not directly accessible at experiments. However, at
 Tevatron \ppbar{} collisions, the quark is provided by the proton with
 very high probability ($\gtrsim{}99\%$ at $\sqrt{s}=1.96\TeV{}$);
-therefore the top quark rapidity $y$\footnote{The rapidity of a
-  particle at colliders is given by
-  $y=\frac{1}{2}ln(\frac{E+p_z}{E-p_z})$, where $E$ is the energy of
-  the particle and $p_z$ the component of its momentum along the beam
-  axis $z$.} with respect to the proton beam direction can be used to
-distinguish between {\it forward} and {\it backward} production with
-high efficiency.
-The asymmetry \afb{} is then re--defined in terms of the rapidity $y$ of the top and
-antitop quarks in the laboratory frame: 
+therefore the top quark rapidity\footnote{The rapidity of a particle
+  at colliders is given by $y=\frac{1}{2}ln(\frac{E+p_z}{E-p_z})$,
+  where $E$ is the energy of the particle and $p_z$ the component of
+  its momentum along the beam axis $z$.} $y$ with respect to the
+proton beam direction can be used to distinguish between {\it forward}
+and {\it backward} production with high efficiency.
+The asymmetry \afb{} is then re--defined in terms of the rapidity $y$
+of the top and antitop quarks in the laboratory frame: 
 \begin{equation}
 \label{eq:afb}
 \afb{}=\frac{N(\Delta{}y>0)-N(\Delta{}y<0)}{N(\Delta{}y>0)+N(\Delta{}y<0)},
@@ -432,7 +455,7 @@ At present, when the full Tevatron dataset has been analyzed, the
 discrepancies have been reduced with respect to previous results. The
 CDF collaboration reports \mbox{$\afb=0.164\pm0.045$}~\cite{Aaltonen:2012it},
 corresponding to a $1.7\sigma$ excess over the SM prediction \mbox{$\afb{} =
-0.088\pm{}0.006$}, whereas the \dzero{} collaboration
+0.088\pm{}0.006$}~\cite{Bernreuther:2012sx}, whereas the \dzero{} collaboration
 finds agreement within $1\sigma$ with
 \mbox{$\afb{}=0.106\pm0.030$}~\cite{Abazov:2014cca}. However, as
 already discussed in Sec.~\ref{sec:introduction}, the \afb{} spectrum as a
@@ -440,31 +463,33 @@ function of the \ttbar{} invariant mass \mtt{} still shows tantalizing
 discrepancies with respect to the theoretical prediction.
 
 At the time when this thesis work began, the discrepancy between
-experimental data and the SM prediction was particularly interesting,
+experimental data and the SM prediction was particularly puzzling,
 with an excess over three standard deviations reported by the CDF
 collaboration in the measurement of \afb{} at high \ttbar{} invariant
 mass $\mtt{}>450\GeV{}$, using half of the total dataset. This anomaly
 triggered a intense activity, both in developing new physics models
-which could explain the anomaly in \ttbar{} production, and in
+(summarized in Sec.~\ref{sec:bsmca})
+that could explain the anomaly in \ttbar{} production, and in
 calculating more precise and accurate SM predictions. The result also
 motivated studies of the \ttbar{} production phenomenology aiming at
 identifying other observables where anomalies might appear if the
 Tevatron asymmetry were indeed a sign of new physics. Among these, the
 charge asymmetry at the LHC is one of the best candidates. 
 
-\subsection{\ac{} at $pp$ collisions}
+\subsection{\ac{} in $pp$ collisions}
 
-At LHC $pp$ collisions the incoming quark has the same probability to be provided by
-either proton beam; thus an FB asymmetry with respect to a fixed direction,
-such as the one defined in Eq.~\ref{eq:afb}, vanishes due to the
-symmetry of the initial state. However, valence quarks are more likely to participate
-in the interaction than sea quarks and carry, on average, a larger fraction of
-momentum than sea anti-quarks. Therefore, in the laboratory frame, the
-direction of flight of the \ttbar{} system is likely to be the same as of
-the incoming quark. In this scenario, a forward top quark in
-the \ttbar{} C.M. has on average a larger absolute rapidity $|y|$, in
-the laboratory frame, than the backward antiquark. 
-A {\it forward-central} charge asymmetry \ac{} can be defined:
+In $pp$ collisions the incoming quark has the same probability to be provided by
+either proton beam; thus a forward--backward asymmetry with respect to
+a fixed direction, such as the one defined in Eq.~\ref{eq:afb},
+vanishes due to the symmetry of the initial state. However, valence
+quarks are more likely to participate in the interaction than sea
+quarks and carry, on average, a larger fraction of momentum than sea
+anti-quarks. Therefore, in the laboratory frame, the direction of
+flight of the \ttbar{} system is likely to be the same as of the
+incoming quark. In this scenario, a forward top quark in the \ttbar{}
+center--of--mass frame has on average a larger absolute rapidity
+$|y|$, in the laboratory frame, than the backward antiquark.
+Therefore, a {\it forward-central} charge asymmetry \ac{} can be defined:
 \begin{equation}
 \label{eq:ac}
 \ac{}=\frac{N(\Delta{}|y|>0)-N(\Delta{}|y|<0)}{N(\Delta{}|y|>0)+N(\Delta{}|y|<0)},
@@ -485,7 +510,7 @@ and~\ref{eq:ac}, diluting the asymmetric \mbox{$\qqbar{}\to\ttbar{}$}
 production. In addition, the probability that the anti-quark carries a
 larger fraction of momentum than the quark -- in which case the
 assumption that the \ttbar{} system is boosted in the direction of the
-incoming quark is voided -- is not negligible, and leads to a further
+incoming quark is invalid -- is not negligible, and leads to a further
 dilution of the asymmetry. The impact of both dilutions can be reduced
 by applying a minimum requirement on the $z$-component of the \ttbar{}
 system velocity \betatt{}~\cite{AguilarSaavedra:2011cp}. Due to the
@@ -562,15 +587,15 @@ different size. The range of allowed \ac{} and \afb{} values for each
 new physics model are shown in Fig.~\ref{fig:bsmmodels}. Depending on
 the features of the model, the asymmetries show different dependence
 on the \ttbar{} invariant mass. Therefore experimental input on this
-dependence in data is valuable for model discrimination. 
+dependence is valuable for model discrimination. 
 
 \begin{figure}[!htb]
   \centering
   \includegraphics[width=0.495\textwidth]{figures/theory/bsm} 
   \includegraphics[width=0.495\textwidth]{figures/theory/bsm_highmtt} 
-  \caption{Allowed regions for the new physics contributions to the FB
+  \caption{Allowed regions for the new physics contributions to the forward--backward
     asymmetry at Tevatron and the inclusive charge asymmetry at LHC
-    (left) and for $\mtt{}>600 \GeV$~\cite{AguilarSaavedra:2011hz}.}
+    (left) and at high \mtt{} (right)~\cite{AguilarSaavedra:2011hz}.}
   \label{fig:bsmmodels}
 \end{figure}
 
