--- a/bib/theory.bib
+++ b/bib/theory.bib
@@ -667,3 +667,40 @@ year = {2014},
 note= {$8^{th}$ Internation Workshop on the CKM Unitarity Triangle},
 URL= {http://indico.cern.ch/event/253826/session/9/contribution/120/material/slides/0.pdf},
 }
+
+@article{Aad:2014fwa,
+      author         = "Aad, Georges and others",
+      title          = "{Comprehensive measurements of $t$-channel single
+                        top-quark production cross sections at $\sqrt{s}$ = 7 TeV
+                        with the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1406.7844",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-133",
+      SLACcitation   = "%%CITATION = ARXIV:1406.7844;%%",
+}
+
+@techreport{ATLAS-CONF-2014-057,
+      title         = "{Measurement of the differential cross-section of highly
+                       boosted top quarks as a function of their transverse
+                       momentum using the ATLAS detector in $\sqrt{s}$ = 8 TeV
+                       proton-proton collisions}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2014-057",
+      month         = "Sep",
+      year          = "2014",
+}
+
+@article{Rodrigo:2012as,
+      author         = "Rodrigo, German",
+      title          = "{The ttbar asymmetry in the Standard Model and beyond}",
+      year           = "2012",
+      eprint         = "1207.0331",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPN12-074, IFIC-12-47",
+      SLACcitation   = "%%CITATION = ARXIV:1207.0331;%%",
+}
