--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -31,6 +31,7 @@
 \usepackage{mathrsfs} 
 \usepackage{amssymb}
 \usepackage{multirow}
+\usepackage{slashed}
 
 \setlength{\oddsidemargin}{0cm}
 \setlength{\evensidemargin}{0cm}
