--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -8,7 +8,7 @@ the course of 2011 at a centre-of-mass energy \seventev{} and a
 dataset corresponding to an integrated luminosity of $20 \ifb{}$
 taken over the course of 2012 at a centre-of-mass energy \eighttev{}.
 This represents the full dataset collected by ATLAS over the course of
-LHC Run 1.
+LHC \mbox{Run 1}.
 
 The lepton+jets signature of the semileptonic \ttbar{} decay has been
 exploited to select samples enriched in \ttbar{} events by identifying
@@ -71,6 +71,13 @@ the LHC. A combination of ATLAS and CMS results has been performed at
 \seventev{}, where this measurement drives the overall precision. A
 combination of measurements from ATLAS and CMS is also foreseen for
 the results at \eighttev{}.
+
+Despite the fact that the Tevatron excess is less significant, there
+is good 
+at the LHC is only to settle this experimental puzzle. Even if the
+Tevatron excess is not real, the LHC is probing a 
+where new physics could manifest itself 
+
 Due to the different initial state and subsequently different
 asymmetry definitions, a direct comparison with the anomaly reported
 at Tevatron cannot be performed. One important step would be to
@@ -94,3 +101,9 @@ smaller. Beside enhancing the \qqbar{} fraction by requiring a large
 $z$--component of the \ttbar{} velocity, a promising approach is to
 study the asymmetry in \ttbar{} events produced in association with
 photons~\cite{Aguilar-Saavedra:2014vta}. 
+In fact, the SM--like \ac{} at the LHC could be the result of an accidental
+cancellation of asymmetries of different sign for $\uubar\to\ttbar$
+and $\ddbar\to\ttbar$, and the $\ttbar{}\gamma$ signature would allow
+the 
+high integrated luminosity
+
