fix met and bibliography

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage[autostyle]{csquotes}
 \usepackage[
         backend=biber,  
-        style=chem-angew,
+        style=phys,
         sorting=none,
         ]{biblatex}
 \selectlanguage{english}
@@ -74,7 +74,7 @@
 \newcommand{\protos}     {{\tt PROTOS}}
 \def\pt{\ensuremath{p_{\mathrm{T}}}}
 \def\mt{\ensuremath{m_{\mathrm{T}}}}
-\def\met{\mbox{\ensuremath{E_{\mathrm{T}^{\mathrm{miss}}}}}}
+\def\met{\mbox{\ensuremath{E_{\mathrm{T}}^{\mathrm{miss}}}}}
 \def\mex{\mbox{\ensuremath{E_x^{\mathrm{miss}}}}}
 \def\mexy{\mbox{\ensuremath{E_{x,y}^{\mathrm{miss}}}}}
 \def\mey{\mbox{\ensuremath{E_y^{\mathrm{miss}}}}}
